# Uniti

./: CMakeLists.txt  LICENSE  README.md  index.cpp  test.json
.github/: windowsBuild.yml
.github/workflows/: deploy.yml  linuxBuild.yml  release.yml
Button/: Button.hpp  CMakeLists.txt
JSScript/: CMakeLists.txt
JSScript/Interpreter/: index.js
JSScript/Interpreter/Uniti/: Uniti.js
JSScript/Interpreter/Uniti/Event/: Events.js
JSScript/Interpreter/Uniti/Network/: Network.js
JSScript/Interpreter/Uniti/Object/: Collision.js  Movement.js  Object.js  Printable.js
JSScript/Interpreter/Uniti/Scene/: Scene.js  SceneManager.js
JSScript/Interpreter/scripts/: connect4.js  text.js
JSScript/Server/: CMakeLists.txt  EntryPointJSListener.cpp  EntryPointJSScript.cpp  JSEvent.cpp  JSEvent.hpp  JSListener.hpp  JSScriptPlugin.hpp  JavascriptPlugin.cpp  JavascriptPlugin.hpp
Network/: CMakeLists.txt  Network.cpp  NetworkPlugin.cpp
Physics/: CMakeLists.txt  Collision.cpp  Collision.hpp  EntryPoint.cpp  PhysicsPlugin.cpp
Plugins/: CMakeLists.txt  CorePlugin.md  ObjectPlugin.md  Plugin.md  ScenePlugin.md
Plugins/Button/: Button.cpp  Button.hpp  Button.md  CMakeLists.txt
Plugins/JSScript/: CMakeLists.txt  JSScript.md
Plugins/JSScript/Server/: CMakeLists.txt  JSEvent.cpp  JSEvent.hpp  JSListener.cpp  JSListener.hpp  JSScriptPlugin.cpp  JavascriptPlugin.cpp  JavascriptPlugin.hpp
Plugins/Network/: CMakeLists.txt  EntryPoint.cpp  Network.cpp  Network.hpp  Network.md  NetworkPlugin.cpp  NetworkPlugin.hpp  Server.cpp  Server.hpp
Plugins/Physics/: CMakeLists.txt  Collision.hpp  Movement.cpp  Movement.hpp  Physics.md  PhysicsPlugin.cpp  PhysicsPlugin.hpp
Plugins/Render/: CMakeLists.txt  Render.md
Plugins/Render/Includes/: CMakeLists.txt  IRenderPlugin.hpp  IWindow.hpp
Plugins/Render/Includes/Event/: CMakeLists.txt  IInput.hpp  IMouse.hpp
Plugins/Render/Includes/Printable/: CMakeLists.txt  IPrintable.hpp  IPrintablePlugin.hpp  ISprite.hpp  IText.hpp
Plugins/Render/Includes/Sound/: CMakeLists.txt  ISound.hpp
Plugins/Render/RayLib/: CMakeLists.txt  RenderPlugin.cpp  RenderPlugin.hpp  Window.cpp  Window.hpp
Plugins/Render/RayLib/Event/: Input.cpp  Input.hpp  Mouse.cpp  Mouse.hpp
Plugins/Render/RayLib/Printable/: PrintablePlugin.cpp  PrintablePlugin.hpp  Sprite.cpp  Sprite.hpp  Text.cpp  Text.hpp
Plugins/Render/RayLib/RayLib/: CMakeLists.txt
Plugins/Render/RayLib/Sound/: CMakeLists.txt  Sound.cpp  Sound.hpp
Plugins/Render/SFML/: CMakeLists.txt  RenderPlugin.cpp  RenderPlugin.hpp  Window.cpp  Window.hpp
Plugins/Render/SFML/Event/: CMakeLists.txt  Input.hpp  Mouse.cpp  Mouse.hpp
Plugins/Render/SFML/Printable/: CMakeLists.txt  PrintablePlugin.cpp  PrintablePlugin.hpp  Sprite.hpp  Text.hpp
Plugins/Render/SFML/SFML/: CMakeLists.txt
Plugins/Render/SFML/Sound/: CMakeLists.txt  SFMLSound.hpp
Plugins/TextInput/: CMakeLists.txt  TextInput.cpp  TextInput.hpp  TextInput.md
Render/: CMakeLists.txt  EntryPointPrintable.cpp  EntryPointRender.cpp
Render/Includes/: IWindow.hpp
Render/Includes/Event/: CMakeLists.txt  IMouse.hpp
Render/Includes/Printable/: CMakeLists.txt  IPrintable.hpp  IText.hpp
Render/Includes/Sound/: CMakeLists.txt  ISound.hpp
Render/SFML/: CMakeLists.txt  RenderPlugin.cpp  RenderPlugin.hpp  Window.cpp  Window.hpp
Render/SFML/Event/: CMakeLists.txt  Input.cpp  Input.hpp  Mouse.cpp  Mouse.hpp
Render/SFML/Printable/: CMakeLists.txt  Printable.cpp  Printable.hpp  PrintablePlugin.cpp  PrintablePlugin.hpp  Sprite.cpp  Sprite.hpp  Text.cpp  Text.hpp
Render/SFML/Sound/: CMakeLists.txt  SFMLSound.cpp  SFMLSound.hpp  Sound.cpp  Sound.hpp
TextInput/: CMakeLists.txt  TextInput.cpp  TextInput.hpp
example/: CMakeLists.txt  connect4.md
example/connect4/: CMakeLists.txt  index.cpp
example/connect4/javascript/: index.js  package.json
example/connect4/javascript/Uniti/Network/: Network.js
example/connect4/javascript/Uniti/Object/: Movement.js  Object.js
example/connect4/javascript/Uniti/Scene/: Scene.js  SceneManager.js
example/connect4/javascript/Uniti/Time/: Clock.js
example/connect4/javascript/scripts/: connect4.js
example/connect4/json/: project.json  startScene.json
json/: startScene.json
libs/: CMakeLists.txt
libs/boost/: CMakeLists.txt
libs/jsoncpp/: CMakeLists.txt
src/: CMakeLists.txt  Core.cpp  Core.hpp
src/Box/: Box.cpp  Box.hpp  CMakeLists.txt
src/Color/: CMakeLists.txt  Color.cpp  Color.hpp
src/Event/: CMakeLists.txt  Event.cpp  Event.hpp
src/Logger/: CMakeLists.txt  Logger.cpp  Logger.hpp
src/Object/: CMakeLists.txt  Object.cpp  Object.hpp  ObjectManager.cpp  Transform.cpp  Transform.hpp
src/Plugin/: API.hpp  CMakeLists.txt  CorePluginManager.hpp  ICorePlugin.hpp  IObjectPlugin.hpp  IPlugin.hpp  IScenePlugin.hpp  ObjectPluginManager.hpp  PluginHandler.hpp  PluginLoader.cpp  PluginLoader.hpp  PluginManager.hpp  ScenePluginManager.hpp  TPluginManager.hpp
src/Plugin/Creator/: CMakeLists.txt  IPluginCreator.hpp  PluginCreator.hpp
src/Plugin/Factory/: CMakeLists.txt  PluginFactory.hpp
src/Scene/: CMakeLists.txt  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  ScenePath.hpp
src/Time/: CMakeLists.txt  Clock.cpp  Clock.hpp
src/Vector/: CMakeLists.txt  Vector.cpp  Vector.hpp  Vector2f.cpp  Vector2f.hpp  Vector2i.cpp  Vector2i.hpp
test/: CMakeLists.txt  test.cpp  test.hpp
