cmake_minimum_required(VERSION 3.22)

option(RENDER_PLUGIN "enable build of Render" ON)
option(NETWORK_PLUGIN "enable build of Network" ON)
option(PHYSICS_PLUGIN "enable build of Physics" ON)
option(JSSCRIPT_PLUGIN "enable build of JSScript" ON)
option(TEXTINPUT_PLUGIN "enable build of TextInput" ON)
option(BUTTON_PLUGIN "enable build of de Button" ON)
option(VANILLA "if vanilla is enable, cmake are going to build nothing" OFF)

if (NOT VANILLA)
    if (RENDER_PLUGIN)
        add_subdirectory(Render)
    endif ()
    if (NETWORK_PLUGIN)
        add_subdirectory(Network)
    endif ()
    if (PHYSICS_PLUGIN)
        add_subdirectory(Physics)
    endif ()
    if (JSSCRIPT_PLUGIN)
        add_subdirectory(JSScript)
    endif ()
    if (TEXTINPUT_PLUGIN)
        add_subdirectory(TextInput)
    endif ()
    if (BUTTON_PLUGIN)
        add_subdirectory(Button)
    endif ()
endif ()